--- a/index.html
+++ b/index.html
@@ -1,71 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Heart Rate Analysis</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <div class="container header-container">
-      <h1>Heart Rate Analysis</h1>
-      <nav>
-        <ul>
-          <li><a href="#visualization">Visualization</a></li>
-          <li><a href="#writeup">Write-Up</a></li>
-        </ul>
-      </nav>
-      <button id="toggle-theme" aria-label="Toggle Light/Dark Mode">Toggle Theme</button>
-    </div>
-  </header>
-  
-  <main>
-    <section id="visualization" class="section">
-      <div class="container">
-        <h2>Interactive Scatter Plot</h2>
-        <p>
-          All data points are plotted as gray dots by default. Use the legends at right to “color‑in” points by activity (Running, Rest, 2‑Back) and to toggle which measure’s points are visible.
-        </p>
-        <div id="viz-container">
-          <!-- Plot will be appended into #plot -->
-          <div id="plot"></div>
-          <!-- Legend panel -->
-          <div id="legend">
-            <h3>Activity Colors</h3>
-            <label><input type="checkbox" class="activity-checkbox" value="Running"> Running</label>
-            <label><input type="checkbox" class="activity-checkbox" value="Rest"> Rest</label>
-            <label><input type="checkbox" class="activity-checkbox" value="2-Back"> 2‑Back</label>
-            <hr/>
-            <h3>Measures</h3>
-            <label><input type="checkbox" class="measure-checkbox" value="heart_rate" checked> Heart Rate</label>
-            <label><input type="checkbox" class="measure-checkbox" value="breathing_rate" checked> Breathing Rate</label>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Heart Rate Analysis</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container header-container">
+        <h1>Does Heart Rate Increase with Greater Cognitive and Physical Load?</h1>
+        <nav>
+          <ul>
+            <li><a href="#visualization">Visualization</a></li>
+            <li><a href="#writeup">Write-Up</a></li>
+          </ul>
+        </nav>
+        <button id="toggle-theme" aria-label="Toggle Light/Dark Mode">Toggle Theme</button>
+      </div>
+    </header>
+    
+    <main>
+      <section id="visualization" class="section">
+        <div class="container">
+          <!-- <h2>Interactive Scatter Plot</h2> -->
+          <p>
+            As cognitive and physical demands rise—whether through intense thinking or running—does the heart respond by beating faster? This visualization helps uncover patterns in heart rate changes under different conditions.
+            All data points start in gray; use the legend to highlight specific activities or compare heart rate with breathing rate. Hover over any point for exact values. You can pan and zoom within the chart by dragging or scrolling.
+          <div id="viz-container">
+            <!-- Plot will be appended into #plot -->
+            <div id="plot"></div>
+            <!-- Legend panel -->
+            <div id="legend">
+              <h3>Activity Colors</h3>
+              <label><input type="checkbox" class="activity-checkbox" value="Running" checked> Running</label>
+              <label><input type="checkbox" class="activity-checkbox" value="Rest" checked> Rest</label>
+              <label><input type="checkbox" class="activity-checkbox" value="2-Back" checked> 2‑Back</label>
+              <hr/>
+              <h3>Measures</h3>
+              <label><input type="checkbox" class="measure-checkbox" value="heart_rate" checked> Heart Rate</label>
+              <label><input type="checkbox" class="measure-checkbox" value="breathing_rate" checked> Breathing Rate</label>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="writeup" class="section">
+      <section id="writeup" class="section">
+        <div class="container">
+          <h2>Project Write-Up</h2>
+          <p>
+            <strong>Rationale:</strong> This visualization explores how heart rate and respiratory (breathing) rate respond under physical (Running) and cognitive (2‑Back) load compared to rest. We chose a scatter plot for its clarity in showing individual data points without overwhelming the user. Interactivity (legends, panning/zooming, tooltips, and hover highlights) ensures an exploratory experience, so viewers can analyze how each measure changes over time.
+          </p>
+          <p>
+            <strong>Development Process:</strong> The project was built using HTML, CSS, and vanilla JavaScript with D3.js as our only plotting library. We focused on data preparation, color encodings, and robust user interactions. Approximately 30 person‑hours were spent, with the majority devoted to implementing the interactive features, ensuring smooth panning/zooming, tooltip positioning, and user-friendly design.
+          </p>
+          <p>
+            <strong>Further Enhancements:</strong> A future version might add boxplots or violin plots for comparing distributional aspects across time or among different subjects, and advanced filters to examine individual differences more precisely.
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <footer>
       <div class="container">
-        <h2>Project Write-Up</h2>
-        <p>
-          <strong>Rationale:</strong> This visualization explores how heart rate and respiratory (breathing) rate respond under physical (Running) and cognitive (2‑Back) load compared to Rest. We chose a scatter plot so that each data point is represented individually; by default they appear in gray to avoid visual clutter. Interaction via legends (checkboxes) enables users to “highlight” data points for each activity and selectively view heart rate or breathing rate.
-        </p>
-        <p>
-          <strong>Development Process:</strong> The project was developed using HTML, CSS, and JavaScript with D3.js as the only plotting library. The work was divided between data processing, layout design, and interactivity, and took roughly 30 person‑hours to complete.
-        </p>
+        <p>&copy; 2025 Heart Rate Analysis Project</p>
       </div>
-    </section>
-  </main>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 Heart Rate Analysis Project</p>
-    </div>
-  </footer>
-  
-  <!-- Include D3.js from CDN -->
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="global.js"></script>
-</body>
+    </footer>
+    
+    <!-- Include D3.js from CDN -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <!-- Your global script with the visualization logic -->
+    <script src="global.js"></script>
+  </body>
 </html>
