--- a/index.html
+++ b/index.html
@@ -22,54 +22,51 @@
     
     <main>
       <section id="visualization" class="section">
-        <div class="container">
-          <!-- <h2>Interactive Scatter Plot</h2> -->
-          <p>
-            As cognitive and physical demands rise—whether through intense thinking or running—does the heart respond by beating faster? This visualization helps uncover patterns in heart rate changes under different conditions.
-            All data points start in gray; use the legend to highlight specific activities or compare heart rate with breathing rate. Hover over any point for exact values. You can pan and zoom within the chart by dragging or scrolling.
+        <div class="container flex-container">
           <div id="viz-container">
-            <!-- Plot will be appended into #plot -->
             <div id="plot"></div>
-            <!-- Legend panel -->
-            <div id="legend">
-              <h3>Activity Colors</h3>
-              <label><input type="checkbox" class="activity-checkbox" value="Running" checked> Running</label>
-              <label><input type="checkbox" class="activity-checkbox" value="Rest" checked> Rest</label>
-              <label><input type="checkbox" class="activity-checkbox" value="2-Back" checked> 2‑Back</label>
-              <hr/>
-              <h3>Measures</h3>
-              <label><input type="checkbox" class="measure-checkbox" value="heart_rate" checked> Heart Rate</label>
-              <label><input type="checkbox" class="measure-checkbox" value="breathing_rate" checked> Breathing Rate</label>
-            </div>
+          </div>
+          <div id="legend">
+            <h3>Activity Colors</h3>
+            <label><input type="checkbox" class="activity-checkbox" value="Running" checked> Running</label>
+            <label><input type="checkbox" class="activity-checkbox" value="Rest" checked> Rest</label>
+            <label><input type="checkbox" class="activity-checkbox" value="2-Back" checked> 2‑Back</label>
+            <hr/>
+            <h3>Measures</h3>
+            <label><input type="checkbox" class="measure-checkbox" value="heart_rate" checked> Heart Rate</label>
+            <label><input type="checkbox" class="measure-checkbox" value="breathing_rate" checked> Breathing Rate</label>
           </div>
         </div>
+        <!-- Place the heart button below the flex container so it appears clearly -->
+        <button id="heart-button" aria-label="Continue"><span>❤</span></button>
       </section>
-
+  
+      <!-- Narrative container -->
+      <section id="narrative" class="section">
+        <div class="container"></div>
+      </section>
+  
       <section id="writeup" class="section">
         <div class="container">
           <h2>Project Write-Up</h2>
           <p>
-            <strong>Rationale:</strong> This visualization explores how heart rate and respiratory (breathing) rate respond under physical (Running) and cognitive (2‑Back) load compared to rest. We chose a scatter plot for its clarity in showing individual data points without overwhelming the user. Interactivity (legends, panning/zooming, tooltips, and hover highlights) ensures an exploratory experience, so viewers can analyze how each measure changes over time.
+            <strong>Rationale:</strong> This visualization uses a click-to-continue narrative (via a heart button) to guide the user through a series of animations. After the final click, the chart becomes fully interactive with tooltips, zoom/pan, and legend queries available.
           </p>
           <p>
-            <strong>Development Process:</strong> The project was built using HTML, CSS, and vanilla JavaScript with D3.js as our only plotting library. We focused on data preparation, color encodings, and robust user interactions. Approximately 30 person‑hours were spent, with the majority devoted to implementing the interactive features, ensuring smooth panning/zooming, tooltip positioning, and user-friendly design.
-          </p>
-          <p>
-            <strong>Further Enhancements:</strong> A future version might add boxplots or violin plots for comparing distributional aspects across time or among different subjects, and advanced filters to examine individual differences more precisely.
+            <strong>Development Process:</strong> Built solely with D3.js and vanilla JavaScript, the project demonstrates how to layer animations and interactions over a data visualization.
           </p>
         </div>
       </section>
     </main>
-
+  
     <footer>
       <div class="container">
         <p>&copy; 2025 Heart Rate Analysis Project</p>
       </div>
     </footer>
     
-    <!-- Include D3.js from CDN -->
+    <!-- Include D3.js -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <!-- Your global script with the visualization logic -->
     <script src="global.js"></script>
-  </body>
+  </body>  
 </html>
