added walking and fixed legend/heart

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
             <label><input type="checkbox" class="activity-checkbox" value="Running" checked> Running</label>
             <label><input type="checkbox" class="activity-checkbox" value="Rest" checked> Rest</label>
             <label><input type="checkbox" class="activity-checkbox" value="2-Back" checked> 2‑Back</label>
+            <label><input type="checkbox" class="activity-checkbox" value="Walking" checked> Walking</label>
             <hr/>
             <h3>Measures</h3>
             <label><input type="checkbox" class="measure-checkbox" value="heart_rate" checked> Heart Rate</label>
             <label><input type="checkbox" class="measure-checkbox" value="breathing_rate" checked> Breathing Rate</label>
-          </div>
+          </div>          
         </div>
         <!-- Place the heart button below the flex container so it appears clearly -->
         <button id="heart-button" aria-label="Continue"><span>❤</span></button>
