--- a/index.html
+++ b/index.html
@@ -1,73 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Heart Rate Analysis</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="container header-container">
-        <h1>Does Heart Rate Increase with Greater Cognitive and Physical Load?</h1>
-        <nav>
-          <ul>
-            <li><a href="#visualization">Visualization</a></li>
-            <li><a href="#writeup">Write-Up</a></li>
-          </ul>
-        </nav>
-        <button id="toggle-theme" aria-label="Toggle Light/Dark Mode">Toggle Theme</button>
-      </div>
-    </header>
-    
-    <main>
-      <section id="visualization" class="section">
-        <div class="container flex-container">
-          <div id="viz-container">
-            <div id="plot"></div>
-          </div>
-          <div id="legend">
-            <h3>Activity Colors</h3>
-            <label><input type="checkbox" class="activity-checkbox" value="Running" checked> Running</label>
-            <label><input type="checkbox" class="activity-checkbox" value="Rest" checked> Rest</label>
-            <label><input type="checkbox" class="activity-checkbox" value="2-Back" checked> 2‑Back</label>
-            <label><input type="checkbox" class="activity-checkbox" value="Walking" checked> Walking</label>
-            <hr/>
-            <h3>Measures</h3>
-            <label><input type="checkbox" class="measure-checkbox" value="heart_rate" checked> Heart Rate</label>
-            <label><input type="checkbox" class="measure-checkbox" value="breathing_rate" checked> Breathing Rate</label>
-          </div>          
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Heart Rate Analysis</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <div class="container header-container">
+      <h1>Does Heart Rate Increase with Greater Cognitive and Physical Load?</h1>
+      <nav>
+        <ul>
+          <li><a href="#visualization">Visualization</a></li>
+          <li><a href="#writeup">Write-Up</a></li>
+        </ul>
+      </nav>
+      <button id="toggle-theme" aria-label="Toggle Light/Dark Mode">Toggle Theme</button>
+    </div>
+  </header>
+
+  <main>
+    <section id="visualization" class="section">
+      <div class="container flex-container">
+        <div id="viz-container">
+          <div id="plot"></div>
         </div>
-        <!-- Place the heart button below the flex container so it appears clearly -->
+        <div id="legend">
+          <h3>Activity Colors</h3>
+          <label><input type="checkbox" class="activity-checkbox" value="Running" checked> Running</label>
+          <label><input type="checkbox" class="activity-checkbox" value="Rest" checked> Rest</label>
+          <label><input type="checkbox" class="activity-checkbox" value="2-Back" checked> 2‑Back</label>
+          <label><input type="checkbox" class="activity-checkbox" value="Walking" checked> Walking</label>
+          <hr />
+          <h3>Measures</h3>
+          <label><input type="checkbox" class="measure-checkbox" value="heart_rate" checked> Heart Rate</label>
+          <label><input type="checkbox" class="measure-checkbox" value="breathing_rate" checked> Breathing Rate</label>
+        </div>
+      </div>
+      <!-- Place the heart button and skip button below the flex container -->
+      <div class="button-container">
         <button id="heart-button" aria-label="Continue"><span>❤</span></button>
-      </section>
-  
-      <!-- Narrative container -->
-      <section id="narrative" class="section">
-        <div class="container"></div>
-      </section>
-  
-      <section id="writeup" class="section">
-        <div class="container">
-          <h2>Project Write-Up</h2>
-          <p>
-            <strong>Rationale:</strong> This visualization uses a click-to-continue narrative (via a heart button) to guide the user through a series of animations. After the final click, the chart becomes fully interactive with tooltips, zoom/pan, and legend queries available.
-          </p>
-          <p>
-            <strong>Development Process:</strong> Built solely with D3.js and vanilla JavaScript, the project demonstrates how to layer animations and interactions over a data visualization.
-          </p>
-        </div>
-      </section>
-    </main>
-  
-    <footer>
-      <div class="container">
-        <p>&copy; 2025 Heart Rate Analysis Project</p>
+            <!-- Narrative container -->
+        <section id="narrative" class="section">
+          <div class="container"></div>
+        </section>
+        <button id="skip-button">Skip Animation</button>
       </div>
-    </footer>
-    
-    <!-- Include D3.js -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="global.js"></script>
-  </body>  
+    </section>
+
+    <section id="writeup" class="section">
+      <div class="container">
+        <h2>Project Write-Up</h2>
+        <p>
+          <strong>Rationale:</strong> This visualization uses a click-to-continue narrative (via a heart button) to
+          guide the user through a series of animations. After the final click, the chart becomes fully interactive with
+          tooltips, zoom/pan, and legend queries available.
+        </p>
+        <p>
+          <strong>Development Process:</strong> Built solely with D3.js and vanilla JavaScript, the project demonstrates
+          how to layer animations and interactions over a data visualization.
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Heart Rate Analysis Project</p>
+    </div>
+  </footer>
+
+  <!-- Include D3.js -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="global.js"></script>
+</body>
+
 </html>
