Add regression line visualization

--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
           <h3>Measures</h3>
           <label><input type="checkbox" class="measure-checkbox" value="heart_rate" checked> Heart Rate</label>
           <label><input type="checkbox" class="measure-checkbox" value="breathing_rate" checked> Breathing Rate</label>
+          <hr />
+          <h3>Points/Regression Lines</h3>
+          <label><input type="checkbox" class="regression-checkbox" value="regression"> Show Regression Lines</label>
         </div>
       </div>
       <!-- Place the heart button and skip button below the flex container -->
       <div class="button-container">
         <button id="heart-button" aria-label="Continue"><span>❤</span></button>
-            <!-- Narrative container -->
+        <!-- Narrative container -->
         <section id="narrative" class="section">
           <div class="container"></div>
         </section>
