change regression lines section header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <label><input type="checkbox" class="measure-checkbox" value="heart_rate" checked> Heart Rate</label>
           <label><input type="checkbox" class="measure-checkbox" value="breathing_rate" checked> Breathing Rate</label>
           <hr />
-          <h3>Points/Regression Lines</h3>
+          <h3>Regression Lines</h3>
           <label><input type="checkbox" class="regression-checkbox" value="regression"> Show Regression Lines</label>
         </div>
       </div>
