--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div id="legend">
             <h3>Activity Colors</h3>
             <label><input type="checkbox" class="activity-checkbox" value="Rest" checked> Rest</label>
-            <label><input type="checkbox" class="activity-checkbox" value="2-Back" checked> 2‑Back</label>
+            <label><input type="checkbox" class="activity-checkbox" value="2-Back" checked> 2‑Back (Cognitive Activity)</label>
             <label><input type="checkbox" class="activity-checkbox" value="Walking" checked> Walking</label>
             <label><input type="checkbox" class="activity-checkbox" value="Running" checked> Running</label>
             <hr />
